# Qt5HttpServerCmake

./: CMakeLists.txt
examples/httpserver/simple/: CMakeLists.txt  SSLConfig.h  main.cpp
src/httpserver/: CMakeLists.txt
src/sslserver/: CMakeLists.txt
